[package]
name = "slack"
version = "0.25.0"
authors = ["Benjamin Elder <bentheelder@gmail.com>", "Matt Jones <mthjones@gmail.com>", "David Hewson <dev@daveid.co.uk>"]
repository = "https://github.com/slack-rs/slack-rs.git"
documentation = "https://docs.rs/slack"
description = "slack realtime messaging client: https://api.slack.com/bot-users"
license = "Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.142"
serde_derive = "1.0.219"
tungstenite = { version = "0.27.0", default-features = false, features = ["handshake", "rustls", "native-tls"] }
log = "0.4.2"
url = "2.5.4"
bytes = "1.10.1"
slack_api= { version = "0.23.1", default-features = false, features = ["reqwest_blocking"] }

[features]
#default = ["with_rustls"]
default = ["with_native_tls"]
with_rustls = ["tungstenite/__rustls-tls", "slack_api/with_rustls"]
with_native_tls = ["tungstenite/native-tls", "slack_api/with_native_tls"]
